# session-devtools

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.cn.md  README.en.md  README.md  README.zh-CN.md  bunfig.toml  development.md  digest.cfg  digest.cfg.example  dump-attr.ts  final-task.md  main.py  package-lock.json  package.json  pyproject.toml  reconstruct.md  token_tracking.md  tsconfig.json  tsup.config.ts  visualization-phase2-p0a.md  visualization-phase2.md  visualization.md
.claude/: settings.json
.github/: pull_request_template.md
client/: README.md  eslint.config.js  index.html  package.json  remotion.config.ts  todo.md  tsconfig.app.json  tsconfig.json  vite.config.ts
demo/: README.md  check.ts  deploy.sh  freeze.ts  sessions.config.json
docs/: .gitignore  CNAME  Gemfile  _config.local.yml  _config.yml  context-reconstruction-correction.md  design.md  index.md  readme.md  session-badges.md  walkthrough.md
scripts/: analyze-message-requests.py  audit.ts  backfill-proxy-request-id.ts  context-audit-fixtures-full.ts  context-audit-rule-coverage.ts  context-audit.ts  context-char-diff.ts  find-fixture-candidates.ts  find-interjections.ts  find-merge-n1-cases.ts  find-queue-messages.ts  jsonl-coverage-report.html  jsonl-coverage-report.ts  migrate-proxy-traffic.ts  package-release.sh  proxy-rollback.sh  publish.sh  reconstruct-parallel.ts  render-story.sh  render-story1.sh  setup-env.sh  sync-worktree-to-main.sh  test-release.sh  verify-rules-against-cli.ts  verify-smoosh-coverage.ts  wait-server.sh
(+698 files in other folders)
