[project]
name = "session-dashboard"
version = "0.1.0"
description = "Unified AI CLI session history dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.33.1",
]

[project.scripts]
session-dashboard = "session_dashboard.app:app.run"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_dashboard"]

[tool.ruff]
line-length = 100
target-version = "py313"
